fix add task clear button board flex direction mobile

--- a/src/app/login/main-page/board/board.scss
+++ b/src/app/login/main-page/board/board.scss
@@ -317,6 +317,10 @@
   display: flex;
   flex-direction: column;
   gap: 8px;
+
+  @media (max-width: 980px) {
+    flex-direction: row;
+  }
 }
 
 .no_tasks_box {
